--- a/checkout.html
+++ b/checkout.html
@@ -86,6 +86,6 @@
       </div>
     </div>
     <script type="module" src="js/checkout.js"></script>
-    <script src="https://unpkg.com/dayjs@1.11.10/esm/index.js"></script>
+    <script src="https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script>
   </body>
 </html>
